tests/unit/default/syntax-error/018-create-table-parens-name.x.t
---- IN ----
+%table(id|
---- OUT ----
---- ERR ----
syntax: expected `:` after `+%table(id` near `|` at position 10 - at line 1
---- EXIT ----
1
